# content-matrix

./: .env.example  .gitignore  AGENTS.md
.opencode/: oh-my-openagent.json
backend/: __init__.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: error_handlers.py
backend/app/api/v1/: assets.py  cube.py  demo_contexts.py  local_video.py  router.py  snapshots.py  source.py  tasks.py
backend/app/core/: config.py  errors.py
backend/app/data/fixtures/: demo_user_asset_contexts.json  reconstruction_tasks.json  saved_reconstruction_snapshots.json  source_mappings.json  video_content_assets.json
backend/app/repositories/: __init__.py  json_repository.py
backend/app/schemas/: __init__.py  assets.py  common.py  cube.py  demo_contexts.py  errors.py  feedback.py  local_video.py  snapshots.py  tasks.py
backend/app/services/: __init__.py  asset_builder.py  cube_view.py  llm_client.py  local_video_parser.py  reconstruction_generator.py  retrieval.py  snapshot_service.py  source_resolver.py  task_state.py
backend/tests/: test_app_baseline.py  test_config.py  test_cube_view_api.py  test_docs_contract.py  test_domain_schemas.py  test_error_contract.py  test_fixture_repository.py  test_frontend_placeholder.py  test_llm_boundary.py  test_local_video_parse_api.py  test_project_foundation.py  test_search_demo_api.py  test_source_asset_api.py  test_task_card_snapshot_api.py
docs/: README.md  api-contract.md  architecture.md  domain-model.md  mock-data.md  setup.md  v0-scope-and-exclusions.md
frontend/: README.md  package-lock.json  package.json  (+2 more)
(+61 files in other folders)
