[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "content-matrix-backend"
version = "0.0.1"
description = "Content Matrix backend - v0 groundwork"
requires-python = ">=3.12"
dependencies = ["fastapi[standard]>=0.110", "pydantic-settings>=2.0", "python-dotenv>=1.0", "uvicorn>=0.30"]

[project.optional-dependencies]
dev = ["httpx>=0.27", "pytest>=7.0", "pytest-asyncio>=0.23"]

[tool.setuptools]
package-dir = {"backend" = "."}
packages = [
    "backend",
    "backend.app",
    "backend.app.api",
    "backend.app.api.v1",
    "backend.app.core",
    "backend.app.repositories",
    "backend.app.schemas",
    "backend.app.services",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
